<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/fondo"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:text="@string/register_app_name"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="309dp"
            android:layout_height="189dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/minimarket" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phoneNumber_input_hint"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_phoneNumber_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_input_content_description_end_icon"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/primary"
            app:startIconContentDescription="@string/register_password_input_content_description_end_icon"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="2dp"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="18dp"
            android:text="@string/login_title"
            app:cornerRadius="5dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No tienes una cuenta?"
                />
            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="Registrate"
                />

        </LinearLayout>
    </LinearLayout>


</ScrollView>